test/e2e/testing-manifests/ingress/neg/rc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: hostname
  name: hostname
spec:
  minReadySeconds: 60
  selector:
    matchLabels:
      run: hostname
  template:
    metadata:
      labels:
        run: hostname
    spec:
      containers:
      - image: k8s.gcr.io/e2e-test-images/serve-hostname:1.1
        imagePullPolicy: IfNotPresent
        name: hostname
      terminationGracePeriodSeconds: 120
